# whitespace-microservice

./: .env.example  .gitignore  README.md  data_loader.py  database.py  docker-compose.yml  main.py  pyproject.toml  whitespace_ml.py
